--- a/index.html
+++ b/index.html
@@ -1,8 +1,33 @@
 <html>
 <header>
-<title>11111</title>
+<title>爽蝈蝈</title>
 </header>
 <body>
-123
+  爽蝈蝈从五月一号到现在已戒烟<br>
+  <strong id="day"></strong>天<br>
+  <strong id="hour"></strong>小时<br>
+  <strong id="minute"></strong>分钟<br>
+  <strong id="second"></strong>秒
 </body>
+  <script>
+    var date1= '2020/05/01 00:00:00';  //开始时间  
+    var date2 = new Date();    //结束时间  
+    var date3 = date2.getTime() - new Date(date1).getTime();   //时间差的毫秒数        
+    //计算出相差天数  
+    var days=Math.floor(date3/(24*3600*1000))  
+    //计算出小时数  
+    var leave1=date3%(24*3600*1000)    //计算天数后剩余的毫秒数  
+    var hours=Math.floor(leave1/(3600*1000))  
+    //计算相差分钟数  
+    var leave2=leave1%(3600*1000)        //计算小时数后剩余的毫秒数  
+    var minutes=Math.floor(leave2/(60*1000))  
+    //计算相差秒数  
+    var leave3=leave2%(60*1000)      //计算分钟数后剩余的毫秒数  
+    var seconds=Math.round(leave3/1000)
+    document.getElementById("day").innerHTML = "days";
+    document.getElementById("hour").innerHTML = "hours";
+    document.getElementById("minute").innerHTML = "minutes";
+    document.getElementById("second").innerHTML = "seconds";
+  
+  </script>
 </html>
