--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
     //计算相差秒数  
     var leave3=leave2%(60*1000)      //计算分钟数后剩余的毫秒数  
     var seconds=Math.round(leave3/1000)
-    document.getElementById("day").innerHTML = "days";
-    document.getElementById("hour").innerHTML = "hours";
-    document.getElementById("minute").innerHTML = "minutes";
-    document.getElementById("second").innerHTML = "seconds";
+    document.getElementById("day").innerHTML = days;
+    document.getElementById("hour").innerHTML = hours;
+    document.getElementById("minute").innerHTML = minutes;
+    document.getElementById("second").innerHTML = seconds;
   
   </script>
 </html>
