--- a/index.html
+++ b/index.html
@@ -4,10 +4,7 @@
 </header>
 <body>
   爽蝈蝈从五月一号到现在已戒烟<br>
-  <strong id="day"></strong>天<br>
-  <strong id="hour"></strong>小时<br>
-  <strong id="minute"></strong>分钟<br>
-  <strong id="second"></strong>秒
+  <strong id="day"></strong>天，<strong id="hour"></strong>小时，<strong id="minute"></strong>分钟，<strong id="second"></strong>秒
 </body>
   <script>
     var date1= '2020/05/01 00:00:00';  //开始时间  
