--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
 <body>
   爽蝈蝈从五月一号到现在已戒烟<br>
   <strong id="day"></strong>天，<strong id="hour"></strong>小时，<strong id="minute"></strong>分钟，<strong id="second"></strong>秒
-</body>
+  <br>
+  <br>
+  从五月一号发现唐瑞抽烟3次，罚款300（尚未给）记录下。
+  </body>
   <script>
     var date1= '2020/05/01 00:00:00';  //开始时间  
     var date2 = new Date();    //结束时间  
